genesis/src/ss/y.output
Terminals unused in grammar

    SL
    COMMAND
    EXPRCALL
    ARGUMENT
    ARGLIST
    LOCREF
    ICAST
    FCAST
    SCAST


Grammar

    0 $accept: script $end

    1 script: statement_list

    2 statement_list: ε

    3 @1: ε

    4 statement_list: statement_list @1 statement stmnt_terminator

    5 stmnt_terminator: '\n'
    6                 | '\r'
    7                 | ';'

    8 statement: while_stmnt
    9          | for_stmnt
   10          | foreach_stmnt
   11          | if_stmnt
   12          | assign_stmnt
   13          | include_stmnt
   14          | endscript_marker
   15          | cmd_stmnt
   16          | func_call
   17          | func_def
   18          | ext_func
   19          | decl_stmnt
   20          | break_stmnt
   21          | return_stmnt
   22          | null_stmnt

   23 endscript_marker: ENDSCRIPT

   24 @2: ε

   25 while_stmnt: WHILE '(' expr ')' @2 statement_list END

   26 @3: ε

   27 for_stmnt: FOR '(' assign_stmnt ';' expr ';' assign_stmnt ')' @3 statement_list END

   28 $@4: ε

   29 $@5: ε

   30 foreach_stmnt: FOREACH VARREF '(' $@4 optwslist arg_list optwslist $@5 ')' statement_list END

   31 @6: ε

   32 if_stmnt: IF '(' expr ')' @6 statement_list else_clause END

   33 else_clause: ε
   34            | ELSE statement_list

   35 @7: ε

   36 else_clause: ELIF '(' expr ')' @7 statement_list else_clause

   37 assign_stmnt: VARREF '=' expr

   38 $@8: ε

   39 include_hdr: INCLUDE $@8 ws

   40 include_stmnt: include_hdr LITERAL WHITESPACE arg_list ws
   41              | include_hdr LITERAL ws

   42 opt_node: ε
   43         | arg_component_list

   44 $@9: ε

   45 cmd_name: IDENT $@9 opt_node

   46 $@10: ε

   47 cmd_name: VARREF $@10 arg_component_list

   48 $@11: ε

   49 cmd_stmnt: cmd_name $@11 opt_arg_list ws

   50 funcref: FUNCREF

   51 $@12: ε

   52 func_call: funcref opt_node $@12 opt_arg_list ws

   53 opt_arg_list: ε
   54             | opt_arg_list wslist arg_component_list

   55 arg_list: arg_component_list
   56         | arg_list wslist arg_component_list

   57 optwslist: ε
   58          | wslist

   59 wslist: WHITESPACE
   60       | wslist WHITESPACE

   61 ws: ε
   62   | WHITESPACE

   63 arg_component_list: arg_component
   64                   | arg_component_list arg_component

   65 arg_component: LITERAL
   66              | STRCONST
   67              | DOLLARARG

   68 $@13: ε

   69 $@14: ε

   70 arg_component: '{' $@13 ac_func_cmd_expr $@14 '}'

   71 ac_func_cmd_expr: func_call
   72                 | cmd_stmnt
   73                 | expr

   74 ext_func: EXTERN IDENT
   75         | EXTERN FUNCREF

   76 func_hdr: FUNCTION IDENT
   77         | FUNCTION FUNCREF

   78 $@15: ε

   79 $@16: ε

   80 func_def: func_hdr $@15 func_args $@16 statement_list END

   81 func_args: ε
   82          | '(' func_arg_list ')'

   83 func_arg_list: IDENT
   84              | func_arg_list ',' IDENT

   85 decl_type: INT
   86          | FLOAT
   87          | STR

   88 decl_stmnt: decl_type decl_list

   89 decl_list: decl_ident

   90 $@17: ε

   91 decl_list: decl_list ',' $@17 decl_ident

   92 $@18: ε

   93 decl_ident: IDENT $@18 init

   94 init: ε
   95     | '=' expr

   96 break_stmnt: BREAK

   97 return_stmnt: RETURN expr
   98             | RETURN

   99 null_stmnt: ε

  100 expr: expr '|' expr
  101     | expr '&' expr
  102     | expr '^' expr
  103     | '~' expr
  104     | expr '@' expr
  105     | expr '+' expr
  106     | expr '-' expr
  107     | expr '*' expr
  108     | expr '/' expr
  109     | expr '%' expr
  110     | expr POW expr
  111     | '-' expr
  112     | expr OR expr
  113     | expr AND expr
  114     | '!' expr
  115     | expr LT expr
  116     | expr LE expr
  117     | expr GT expr
  118     | expr GE expr
  119     | expr EQ expr
  120     | expr NE expr
  121     | VARREF
  122     | FLOATCONST
  123     | INTCONST
  124     | STRCONST
  125     | DOLLARARG
  126     | '{' expr '}'
  127     | '{' cmd_stmnt '}'
  128     | '{' func_call '}'
  129     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 5
    '\r' (13) 6
    '!' (33) 114
    '%' (37) 109
    '&' (38) 101
    '(' (40) 25 27 30 32 36 82 129
    ')' (41) 25 27 30 32 36 82 129
    '*' (42) 107
    '+' (43) 105
    ',' (44) 84 91
    '-' (45) 106 111
    '/' (47) 108
    ';' (59) 7 27
    '=' (61) 37 95
    '@' (64) 104
    '^' (94) 102
    '{' (123) 70 126 127 128
    '|' (124) 100
    '}' (125) 70 126 127 128
    '~' (126) 103
    error (256)
    OR (258) 112
    AND (259) 113
    LT (260) 115
    LE (261) 116
    GT (262) 117
    GE (263) 118
    EQ (264) 119
    NE (265) 120
    POW (266) 110
    UMINUS (267)
    WHILE (268) 25
    IF (269) 32
    ELSE (270) 34
    ELIF (271) 36
    FOR (272) 27
    FOREACH (273) 30
    END (274) 25 27 30 32 80
    INCLUDE (275) 39
    ENDSCRIPT (276) 23
    BREAK (277) 96
    INT (278) 85
    FLOAT (279) 86
    STR (280) 87
    RETURN (281) 97 98
    WHITESPACE (282) 40 59 60 62
    FUNCTION (283) 76 77
    INTCONST <iconst> (284) 123
    DOLLARARG <iconst> (285) 67 125
    FLOATCONST <fconst> (286) 122
    STRCONST <str> (287) 66 124
    LITERAL <str> (288) 40 41 65
    IDENT <str> (289) 45 74 76 83 84 93
    VARREF <str> (290) 30 37 47 121
    FUNCREF <str> (291) 50 75 77
    EXTERN <str> (292) 74 75
    SL (293)
    COMMAND (294)
    EXPRCALL (295)
    ARGUMENT (296)
    ARGLIST (297)
    LOCREF (298)
    ICAST (299)
    FCAST (300)
    SCAST (301)


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    script <pn> (68)
        on left: 1
        on right: 0
    statement_list <pn> (69)
        on left: 2 4
        on right: 1 4 25 27 30 32 34 36 80
    @1 (70)
        on left: 3
        on right: 4
    stmnt_terminator (71)
        on left: 5 6 7
        on right: 4
    statement <pn> (72)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 4
    endscript_marker <pn> (73)
        on left: 23
        on right: 14
    while_stmnt <pn> (74)
        on left: 25
        on right: 8
    @2 (75)
        on left: 24
        on right: 25
    for_stmnt <pn> (76)
        on left: 27
        on right: 9
    @3 (77)
        on left: 26
        on right: 27
    foreach_stmnt <pn> (78)
        on left: 30
        on right: 10
    $@4 (79)
        on left: 28
        on right: 30
    $@5 (80)
        on left: 29
        on right: 30
    if_stmnt <pn> (81)
        on left: 32
        on right: 11
    @6 (82)
        on left: 31
        on right: 32
    else_clause <pn> (83)
        on left: 33 34 36
        on right: 32 36
    @7 (84)
        on left: 35
        on right: 36
    assign_stmnt <pn> (85)
        on left: 37
        on right: 12 27
    include_hdr <str> (86)
        on left: 39
        on right: 40 41
    $@8 (87)
        on left: 38
        on right: 39
    include_stmnt <pn> (88)
        on left: 40 41
        on right: 13
    opt_node <pn> (89)
        on left: 42 43
        on right: 45 52
    cmd_name <pn> (90)
        on left: 45 47
        on right: 49
    $@9 (91)
        on left: 44
        on right: 45
    $@10 (92)
        on left: 46
        on right: 47
    cmd_stmnt <pn> (93)
        on left: 49
        on right: 15 72 127
    $@11 (94)
        on left: 48
        on right: 49
    funcref <str> (95)
        on left: 50
        on right: 52
    func_call <pn> (96)
        on left: 52
        on right: 16 71 128
    $@12 (97)
        on left: 51
        on right: 52
    opt_arg_list <pn> (98)
        on left: 53 54
        on right: 49 52 54
    arg_list <pn> (99)
        on left: 55 56
        on right: 30 40 56
    optwslist (100)
        on left: 57 58
        on right: 30
    wslist (101)
        on left: 59 60
        on right: 54 56 58 60
    ws (102)
        on left: 61 62
        on right: 39 40 41 49 52
    arg_component_list <pn> (103)
        on left: 63 64
        on right: 43 47 54 55 56 64
    arg_component <pn> (104)
        on left: 65 66 67 70
        on right: 63 64
    $@13 (105)
        on left: 68
        on right: 70
    $@14 (106)
        on left: 69
        on right: 70
    ac_func_cmd_expr <pn> (107)
        on left: 71 72 73
        on right: 70
    ext_func <pn> (108)
        on left: 74 75
        on right: 18
    func_hdr <pn> (109)
        on left: 76 77
        on right: 80
    func_def <pn> (110)
        on left: 80
        on right: 17
    $@15 (111)
        on left: 78
        on right: 80
    $@16 (112)
        on left: 79
        on right: 80
    func_args <pn> (113)
        on left: 81 82
        on right: 80
    func_arg_list <pn> (114)
        on left: 83 84
        on right: 82 84
    decl_type (115)
        on left: 85 86 87
        on right: 88
    decl_stmnt <pn> (116)
        on left: 88
        on right: 19
    decl_list <pn> (117)
        on left: 89 91
        on right: 88 91
    $@17 (118)
        on left: 90
        on right: 91
    decl_ident <pn> (119)
        on left: 93
        on right: 89 91
    $@18 (120)
        on left: 92
        on right: 93
    init <pn> (121)
        on left: 94 95
        on right: 93
    break_stmnt <pn> (122)
        on left: 96
        on right: 20
    return_stmnt <pn> (123)
        on left: 97 98
        on right: 21
    null_stmnt <pn> (124)
        on left: 99
        on right: 22
    expr <pn> (125)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
        on right: 25 27 32 36 37 73 95 97 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 126 129


State 0

    0 $accept: • script $end

    $default  reduce using rule 2 (statement_list)

    script          go to state 1
    statement_list  go to state 2


State 1

    0 $accept: script • $end

    $end  shift, and go to state 3


State 2

    1 script: statement_list •
    4 statement_list: statement_list • @1 statement stmnt_terminator

    $end      reduce using rule 1 (script)
    $default  reduce using rule 3 (@1)

    @1  go to state 4


State 3

    0 $accept: script $end •

    $default  accept


State 4

    4 statement_list: statement_list @1 • statement stmnt_terminator

    WHILE      shift, and go to state 5
    IF         shift, and go to state 6
    FOR        shift, and go to state 7
    FOREACH    shift, and go to state 8
    INCLUDE    shift, and go to state 9
    ENDSCRIPT  shift, and go to state 10
    BREAK      shift, and go to state 11
    INT        shift, and go to state 12
    FLOAT      shift, and go to state 13
    STR        shift, and go to state 14
    RETURN     shift, and go to state 15
    FUNCTION   shift, and go to state 16
    IDENT      shift, and go to state 17
    VARREF     shift, and go to state 18
    FUNCREF    shift, and go to state 19
    EXTERN     shift, and go to state 20

    $default  reduce using rule 99 (null_stmnt)

    statement         go to state 21
    endscript_marker  go to state 22
    while_stmnt       go to state 23
    for_stmnt         go to state 24
    foreach_stmnt     go to state 25
    if_stmnt          go to state 26
    assign_stmnt      go to state 27
    include_hdr       go to state 28
    include_stmnt     go to state 29
    cmd_name          go to state 30
    cmd_stmnt         go to state 31
    funcref           go to state 32
    func_call         go to state 33
    ext_func          go to state 34
    func_hdr          go to state 35
    func_def          go to state 36
    decl_type         go to state 37
    decl_stmnt        go to state 38
    break_stmnt       go to state 39
    return_stmnt      go to state 40
    null_stmnt        go to state 41


State 5

   25 while_stmnt: WHILE • '(' expr ')' @2 statement_list END

    '('  shift, and go to state 42


State 6

   32 if_stmnt: IF • '(' expr ')' @6 statement_list else_clause END

    '('  shift, and go to state 43


State 7

   27 for_stmnt: FOR • '(' assign_stmnt ';' expr ';' assign_stmnt ')' @3 statement_list END

    '('  shift, and go to state 44


State 8

   30 foreach_stmnt: FOREACH • VARREF '(' $@4 optwslist arg_list optwslist $@5 ')' statement_list END

    VARREF  shift, and go to state 45


State 9

   39 include_hdr: INCLUDE • $@8 ws

    $default  reduce using rule 38 ($@8)

    $@8  go to state 46


State 10

   23 endscript_marker: ENDSCRIPT •

    $default  reduce using rule 23 (endscript_marker)


State 11

   96 break_stmnt: BREAK •

    $default  reduce using rule 96 (break_stmnt)


State 12

   85 decl_type: INT •

    $default  reduce using rule 85 (decl_type)


State 13

   86 decl_type: FLOAT •

    $default  reduce using rule 86 (decl_type)


State 14

   87 decl_type: STR •

    $default  reduce using rule 87 (decl_type)


State 15

   97 return_stmnt: RETURN • expr
   98             | RETURN •

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    $default  reduce using rule 98 (return_stmnt)

    expr  go to state 57


State 16

   76 func_hdr: FUNCTION • IDENT
   77         | FUNCTION • FUNCREF

    IDENT    shift, and go to state 58
    FUNCREF  shift, and go to state 59


State 17

   45 cmd_name: IDENT • $@9 opt_node

    $default  reduce using rule 44 ($@9)

    $@9  go to state 60


State 18

   37 assign_stmnt: VARREF • '=' expr
   47 cmd_name: VARREF • $@10 arg_component_list

    '='  shift, and go to state 61

    $default  reduce using rule 46 ($@10)

    $@10  go to state 62


State 19

   50 funcref: FUNCREF •

    $default  reduce using rule 50 (funcref)


State 20

   74 ext_func: EXTERN • IDENT
   75         | EXTERN • FUNCREF

    IDENT    shift, and go to state 63
    FUNCREF  shift, and go to state 64


State 21

    4 statement_list: statement_list @1 statement • stmnt_terminator

    '\n'  shift, and go to state 65
    '\r'  shift, and go to state 66
    ';'   shift, and go to state 67

    stmnt_terminator  go to state 68


State 22

   14 statement: endscript_marker •

    $default  reduce using rule 14 (statement)


State 23

    8 statement: while_stmnt •

    $default  reduce using rule 8 (statement)


State 24

    9 statement: for_stmnt •

    $default  reduce using rule 9 (statement)


State 25

   10 statement: foreach_stmnt •

    $default  reduce using rule 10 (statement)


State 26

   11 statement: if_stmnt •

    $default  reduce using rule 11 (statement)


State 27

   12 statement: assign_stmnt •

    $default  reduce using rule 12 (statement)


State 28

   40 include_stmnt: include_hdr • LITERAL WHITESPACE arg_list ws
   41              | include_hdr • LITERAL ws

    LITERAL  shift, and go to state 69


State 29

   13 statement: include_stmnt •

    $default  reduce using rule 13 (statement)


State 30

   49 cmd_stmnt: cmd_name • $@11 opt_arg_list ws

    $default  reduce using rule 48 ($@11)

    $@11  go to state 70


State 31

   15 statement: cmd_stmnt •

    $default  reduce using rule 15 (statement)


State 32

   52 func_call: funcref • opt_node $@12 opt_arg_list ws

    DOLLARARG  shift, and go to state 71
    STRCONST   shift, and go to state 72
    LITERAL    shift, and go to state 73
    '{'        shift, and go to state 74

    $default  reduce using rule 42 (opt_node)

    opt_node            go to state 75
    arg_component_list  go to state 76
    arg_component       go to state 77


State 33

   16 statement: func_call •

    $default  reduce using rule 16 (statement)


State 34

   18 statement: ext_func •

    $default  reduce using rule 18 (statement)


State 35

   80 func_def: func_hdr • $@15 func_args $@16 statement_list END

    $default  reduce using rule 78 ($@15)

    $@15  go to state 78


State 36

   17 statement: func_def •

    $default  reduce using rule 17 (statement)


State 37

   88 decl_stmnt: decl_type • decl_list

    IDENT  shift, and go to state 79

    decl_list   go to state 80
    decl_ident  go to state 81


State 38

   19 statement: decl_stmnt •

    $default  reduce using rule 19 (statement)


State 39

   20 statement: break_stmnt •

    $default  reduce using rule 20 (statement)


State 40

   21 statement: return_stmnt •

    $default  reduce using rule 21 (statement)


State 41

   22 statement: null_stmnt •

    $default  reduce using rule 22 (statement)


State 42

   25 while_stmnt: WHILE '(' • expr ')' @2 statement_list END

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 82


State 43

   32 if_stmnt: IF '(' • expr ')' @6 statement_list else_clause END

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 83


State 44

   27 for_stmnt: FOR '(' • assign_stmnt ';' expr ';' assign_stmnt ')' @3 statement_list END

    VARREF  shift, and go to state 84

    assign_stmnt  go to state 85


State 45

   30 foreach_stmnt: FOREACH VARREF • '(' $@4 optwslist arg_list optwslist $@5 ')' statement_list END

    '('  shift, and go to state 86


State 46

   39 include_hdr: INCLUDE $@8 • ws

    WHITESPACE  shift, and go to state 87

    $default  reduce using rule 61 (ws)

    ws  go to state 88


State 47

  114 expr: '!' • expr

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 89


State 48

  111 expr: '-' • expr

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 90


State 49

  103 expr: '~' • expr

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 91


State 50

  123 expr: INTCONST •

    $default  reduce using rule 123 (expr)


State 51

  125 expr: DOLLARARG •

    $default  reduce using rule 125 (expr)


State 52

  122 expr: FLOATCONST •

    $default  reduce using rule 122 (expr)


State 53

  124 expr: STRCONST •

    $default  reduce using rule 124 (expr)


State 54

  121 expr: VARREF •

    $default  reduce using rule 121 (expr)


State 55

  129 expr: '(' • expr ')'

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 92


State 56

  126 expr: '{' • expr '}'
  127     | '{' • cmd_stmnt '}'
  128     | '{' • func_call '}'

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    IDENT       shift, and go to state 17
    VARREF      shift, and go to state 93
    FUNCREF     shift, and go to state 19
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    cmd_name   go to state 30
    cmd_stmnt  go to state 94
    funcref    go to state 32
    func_call  go to state 95
    expr       go to state 96


State 57

   97 return_stmnt: RETURN expr •
  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr

    OR   shift, and go to state 97
    AND  shift, and go to state 98
    LT   shift, and go to state 99
    LE   shift, and go to state 100
    GT   shift, and go to state 101
    GE   shift, and go to state 102
    EQ   shift, and go to state 103
    NE   shift, and go to state 104
    '+'  shift, and go to state 105
    '-'  shift, and go to state 106
    '&'  shift, and go to state 107
    '|'  shift, and go to state 108
    '^'  shift, and go to state 109
    '@'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    '%'  shift, and go to state 113
    POW  shift, and go to state 114

    $default  reduce using rule 97 (return_stmnt)


State 58

   76 func_hdr: FUNCTION IDENT •

    $default  reduce using rule 76 (func_hdr)


State 59

   77 func_hdr: FUNCTION FUNCREF •

    $default  reduce using rule 77 (func_hdr)


State 60

   45 cmd_name: IDENT $@9 • opt_node

    DOLLARARG  shift, and go to state 71
    STRCONST   shift, and go to state 72
    LITERAL    shift, and go to state 73
    '{'        shift, and go to state 74

    $default  reduce using rule 42 (opt_node)

    opt_node            go to state 115
    arg_component_list  go to state 76
    arg_component       go to state 77


State 61

   37 assign_stmnt: VARREF '=' • expr

    '!'         shift, and go to state 47
    '-'         shift, and go to state 48
    '~'         shift, and go to state 49
    INTCONST    shift, and go to state 50
    DOLLARARG   shift, and go to state 51
    FLOATCONST  shift, and go to state 52
    STRCONST    shift, and go to state 53
    VARREF      shift, and go to state 54
    '('         shift, and go to state 55
    '{'         shift, and go to state 56

    expr  go to state 116


State 62

   47 cmd_name: VARREF $@10 • arg_component_list

    DOLLARARG  shift, and go to state 71
    STRCONST   shift, and go to state 72
    LITERAL    shift, and go to state 73
    '{'        shift, and go to state 74

    arg_component_list  go to state 117
    arg_component       go to state 77


State 63

   74 ext_func: EXTERN IDENT •

    $default  reduce using rule 74 (ext_func)


State 64

   75 ext_func: EXTERN FUNCREF •

    $default  reduce using rule 75 (ext_func)


State 65

    5 stmnt_terminator: '\n' •

    $default  reduce using rule 5 (stmnt_terminator)


State 66

    6 stmnt_terminator: '\r' •

    $default  reduce using rule 6 (stmnt_terminator)


State 67

    7 stmnt_terminator: ';' •

    $default  reduce using rule 7 (stmnt_terminator)


State 68

    4 statement_list: statement_list @1 statement stmnt_terminator •

    $default  reduce using rule 4 (statement_list)


State 69

   40 include_stmnt: include_hdr LITERAL • WHITESPACE arg_list ws
   41              | include_hdr LITERAL • ws

    WHITESPACE  shift, and go to state 118

    $default  reduce using rule 61 (ws)

    ws  go to state 119


State 70

   49 cmd_stmnt: cmd_name $@11 • opt_arg_list ws

    $default  reduce using rule 53 (opt_arg_list)

    opt_arg_list  go to state 120


State 71

   67 arg_component: DOLLARARG •

    $default  reduce using rule 67 (arg_component)


State 72

   66 arg_component: STRCONST •

    $default  reduce using rule 66 (arg_component)


State 73

   65 arg_component: LITERAL •

    $default  reduce using rule 65 (arg_component)


State 74

   70 arg_component: '{' • $@13 ac_func_cmd_expr $@14 '}'

    $default  reduce using rule 68 ($@13)

    $@13  go to state 121


State 75

   52 func_call: funcref opt_node • $@12 opt_arg_list ws

    $default  reduce using rule 51 ($@12)

    $@12  go to state 122


State 76

   43 opt_node: arg_component_list •
   64 arg_component_list: arg_component_list • arg_component

    DOLLARARG  shift, and go to state 71
    STRCONST   shift, and go to state 72
    LITERAL    shift, and go to state 73
    '{'        shift, and go to state 74

    $default  reduce using rule 43 (opt_node)

    arg_component  go to state 123


State 77

   63 arg_component_list: arg_component •

    $default  reduce using rule 63 (arg_component_list)


State 78

   80 func_def: func_hdr $@15 • func_args $@16 statement_list END

    '('  shift, and go to state 124

    $default  reduce using rule 81 (func_args)

    func_args  go to state 125


State 79

   93 decl_ident: IDENT • $@18 init

    $default  reduce using rule 92 ($@18)

    $@18  go to state 126


State 80

   88 decl_stmnt: decl_type decl_list •
   91 decl_list: decl_list • ',' $@17 decl_ident

    ','  shift, and go to state 127

    $default  reduce using rule 88 (decl_stmnt)


State 81

   89 decl_list: decl_ident •

    $default  reduce using rule 89 (decl_list)


State 82

   25 while_stmnt: WHILE '(' expr • ')' @2 statement_list END
  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr

    OR   shift, and go to state 97
    AND  shift, and go to state 98
    LT   shift, and go to state 99
    LE   shift, and go to state 100
    GT   shift, and go to state 101
    GE   shift, and go to state 102
    EQ   shift, and go to state 103
    NE   shift, and go to state 104
    '+'  shift, and go to state 105
    '-'  shift, and go to state 106
    '&'  shift, and go to state 107
    '|'  shift, and go to state 108
    '^'  shift, and go to state 109
    '@'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    '%'  shift, and go to state 113
    POW  shift, and go to state 114
    ')'  shift, and go to state 128


State 83

   32 if_stmnt: IF '(' expr • ')' @6 statement_list else_clause END
  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr

    OR   shift, and go to state 97
    AND  shift, and go to state 98
    LT   shift, and go to state 99
    LE   shift, and go to state 100
    GT   shift, and go to state 101
    GE   shift, and go to state 102
    EQ   shift, and go to state 103
    NE   shift, and go to state 104
    '+'  shift, and go to state 105
    '-'  shift, and go to state 106
    '&'  shift, and go to state 107
    '|'  shift, and go to state 108
    '^'  shift, and go to state 109
    '@'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    '%'  shift, and go to state 113
    POW  shift, and go to state 114
    ')'  shift, and go to state 129


State 84

   37 assign_stmnt: VARREF • '=' expr

    '='  shift, and go to state 61


State 85

   27 for_stmnt: FOR '(' assign_stmnt • ';' expr ';' assign_stmnt ')' @3 statement_list END

    ';'  shift, and go to state 130


State 86

   30 foreach_stmnt: FOREACH VARREF '(' • $@4 optwslist arg_list optwslist $@5 ')' statement_list END

    $default  reduce using rule 28 ($@4)

    $@4  go to state 131


State 87

   62 ws: WHITESPACE •

    $default  reduce using rule 62 (ws)


State 88

   39 include_hdr: INCLUDE $@8 ws •

    $default  reduce using rule 39 (include_hdr)


State 89

  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  114     | '!' expr •
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr

    '+'  shift, and go to state 105
    '-'  shift, and go to state 106
    '&'  shift, and go to state 107
    '|'  shift, and go to state 108
    '^'  shift, and go to state 109
    '@'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    '%'  shift, and go to state 113
    POW  shift, and go to state 114

    $default  reduce using rule 114 (expr)


State 90

  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  111     | '-' expr •
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr

    $default  reduce using rule 111 (expr)


State 91

  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  103     | '~' expr •
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr

    POW  shift, and go to state 114

    $default  reduce using rule 103 (expr)


State 92

  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr
  129     | '(' expr • ')'

    OR   shift, and go to state 97
    AND  shift, and go to state 98
    LT   shift, and go to state 99
    LE   shift, and go to state 100
    GT   shift, and go to state 101
    GE   shift, and go to state 102
    EQ   shift, and go to state 103
    NE   shift, and go to state 104
    '+'  shift, and go to state 105
    '-'  shift, and go to state 106
    '&'  shift, and go to state 107
    '|'  shift, and go to state 108
    '^'  shift, and go to state 109
    '@'  shift, and go to state 110
    '*'  shift, and go to state 111
    '/'  shift, and go to state 112
    '%'  shift, and go to state 113
    POW  shift, and go to state 114
    ')'  shift, and go to state 132


State 93

   47 cmd_name: VARREF • $@10 arg_component_list
  121 expr: VARREF •

    DOLLARARG  reduce using rule 46 ($@10)
    STRCONST   reduce using rule 46 ($@10)
    LITERAL    reduce using rule 46 ($@10)
    '{'        reduce using rule 46 ($@10)
    $default   reduce using rule 121 (expr)

    $@10  go to state 62


State 94

  127 expr: '{' cmd_stmnt • '}'

    '}'  shift, and go to state 133


State 95

  128 expr: '{' func_call • '}'

    '}'  shift, and go to state 134


State 96

  100 expr: expr • '|' expr
  101     | expr • '&' expr
  102     | expr • '^' expr
  104     | expr • '@' expr
  105     | expr • '+' expr
  106     | expr • '-' expr
  107     | expr • '*' expr
  108     | expr • '/' expr
  109     | expr • '%' expr
  110     | expr • POW expr
  112     | expr • OR expr
  113     | expr • AND expr
  115     | expr • LT expr
  116     | expr • LE expr
  117     | expr • GT expr
  118     | expr • GE expr
  119     | expr • EQ expr
  120     | expr • NE expr
  126     | '{' expr • '}'
